Wed Oct  4 17:36:43 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/apps/osql GNU sed does not support -E

Wed Oct  4 14:48:20 EDT 2006	JK Lowden <jklowden@freetds.org>
	* doc/Makefile.am doc/osql.txt added osql man page
	
Wed Oct  4 14:12:25 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/apps/Makefile.am add osql as installable script

Tue Oct  3 15:40:12 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c test fwrite(3) correctly

Tue Sep 26 16:57:42 EDT 2006	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c src/dblib/dblib.c
	* src/tds/convert.c src/tds/net.c src/tds/token.c
	- added more user-level error checking, checking against 
	- known list of db-lib error messages
	* src/apps/osql added

Wed Sep 13 13:55:24 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* samples/Makefile.am samples/unixodbc.freetds.driver.template.in:
	- add Setup entry to unixODBC template
	- unixODBC templates are not executables

Wed Sep 13 13:52:40 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c: enable wide table

Wed Sep 13 11:47:27 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c:
	- fix really broken tds5_process_result

Fri Sep 08 11:58:24 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/tds/threadsafe.c:
	- fix threadsafe problem on NetBSD

Fri Sep 08 11:17:55 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/token.c: make splint a bit more happy
	* src/odbc/odbc.c: small 64bit improvements

Thu Sep 07 23:10:29 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/sql2tds.c: fix paramset (Levente Tamási)

Fri Sep  1 10:34:20 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tdsstring.h src/ctlib/ct.c:
	* src/odbc/connectparams.c src/odbc/odbc.c src/server/login.c:
	* src/tds/config.c src/tds/tdsstring.c:
	- add dstr_size to DSTR
	- add tds_dstr_alloc, tds_dstr_setlen, tds_dstr_buf
